# r

./: .gitignore  LICENSE  README.md  config.json  index-template.html  main.py  pyproject.toml
docs/: bg.htm  bk.htm  i.htm  ig.htm  index.html  m.htm  mg.htm  q.htm  qg.htm  sc.htm  sf.htm  sg.htm
