[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = ""
authors = ["hungduong <hung.duong@geocomply.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pyright = "^1.1.325"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
py_version = "auto"
profile = "black"
line_length = 120
known_first_party = []

[tool.pyright]
pythonVersion = "3.11"
include = []

[tool.ruff]
line-length = 120
